# owen

./: .gitignore  README.md  owen.cabal  stack.yaml
src/: Benchmark.hs  OwenQ.hs  OwenT.hs  OwenT2.hs  OwenTboost.hs  OwenTintegration.hs  Student.hs
src-dll/: OwenExport.hs
src/OwenQ/: Internal.hs
src/Student/: Internal.hs
